<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Emergency Contact Helper</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="no_account">Don\'t have an account? Register</string>
    <string name="already_account">Already have an account? Login</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>