<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:elevation="8dp"
        android:background="#FFFFFF">

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="#212121"
            android:textColorHint="#757575"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="8dp"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:textColorHint="#757575"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="8dp"
            android:minHeight="48dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="8dp"
            android:textColor="#212121"
            android:minHeight="48dp"
            android:hint="@string/password"
            android:textColorHint="#757575"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="8dp"
            android:minHeight="48dp"
            android:textColor="#212121"
            android:textColorHint="#757575"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/register"
            android:minHeight="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:gravity="center"
            android:text="@string/already_account"
            android:textColor="@color/blue" />

    </LinearLayout>

</LinearLayout>